test_case/rust-lang_rust/34359_227012088.rs
 rust
fn main() {
    for _ in 0 .. 2 {
        let x = break;
        x(); //~ERROR
    }
}
